--- a/index.html
+++ b/index.html
@@ -185,10 +185,28 @@
 
     sendBtn.addEventListener('click', async () => {
       // must be activated
-      if(sessionStorage.getItem('rem_activated') !== ACTIVATION_CODE){
-        alert('يجب إدخال رمز التفعيل أولاً.');
-        checkActivation();
-        return;
+      const subject = document.getElementById('subject').value.trim();
+const task = document.getElementById('task').value.trim();
+const date = document.getElementById('date').value || "";
+
+// 🔥 إنشاء ID فريد
+const id = "task-" + crypto.randomUUID();
+
+statusEl.style.color = "#fff";
+statusEl.textContent = "⏳ جارٍ الإرسال...";
+
+try {
+  const res = await fetch(API, {
+    method: "POST",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({
+      id,
+      subject,
+      task,
+      date
+    })
+  });
+
       }
 
       const subject = document.getElementById('subject').value.trim();
@@ -208,7 +226,12 @@
         const res = await fetch(API, {
           method: "POST",
           headers: {"Content-Type":"application/json"},
-          body: JSON.stringify({subject, task, date})
+          // إنشاء ID فريد للمهمة
+        const id = "task-" + crypto.randomUUID();
+
+       // إرسال المهمة مع الـ ID
+        body: JSON.stringify({ id, subject, task, date })
+
         });
 
         if(res.ok){
@@ -234,3 +257,4 @@
   </script>
 </body>
 </html>
+
