--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     // -----------------------------
     // إعدادات — غيّر إذا لزم
     // -----------------------------
-    <!-- const API = "https://zkr-495g.onrender.com/tasks"; // رابط الـ API الخاص بك -->
+    const API = "https://zkr-495g.onrender.com/tasks";
     const ACTIVATION_CODE = "ran-/u87"; // كود التفعيل
 
     // -----------------------------
@@ -234,3 +234,4 @@
   </script>
 </body>
 </html>
+
